# smallstring

./: LICENSE  bench.sh  inplace.sh  smallstring.cabal
Data/: ByteArray.hs  SmallString.hs
test/: Bench.hs  words.txt
