Name:                smallstring
Version:             0.1
Synopsis:            A string type optimized for size in memory
Homepage:            http://community.haskell.org/~aslatter/code/smallstring/
License:             BSD3
License-file:        LICENSE
Author:              Antoine Latter
Maintainer:          aslatter@gmail.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Build-depends:       base == 4.*, utf8-string == 0.3.*, bytearray == 0.0.*,
                       deepseq == 1.1.*
  Exposed-modules:     Data.SmallString